--- a/src/components/Layout/HeaderCartButton.module.css
+++ b/src/components/Layout/HeaderCartButton.module.css
@@ -1,41 +1,78 @@
 .button {
-    cursor: pointer;
-    font: inherit;
-    border: none;
-    background-color: #6d1da7;
-    color: white;
-    padding: 0.75rem 3rem;
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-    border-radius: 25px;
-    font-weight: bold;
+  cursor: pointer;
+  font: inherit;
+  border: none;
+  background-color: #6d1da7;
+  color: white;
+  padding: 0.75rem 3rem;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  border-radius: 25px;
+  font-weight: bold;
+}
+
+.button:hover,
+.button:active {
+  background-color: #410070;
+}
+
+.icon {
+  width: 1.35rem;
+  height: 1.35rem;
+  margin-right: 0.5rem;
+}
+
+.badge {
+  background-color: #500388;
+  padding: 0.25rem 1rem;
+  border-radius: 25px;
+  margin-left: 1rem;
+  font-weight: bold;
+}
+
+.button:hover .badge,
+.button:active .badge {
+  background-color: #8d04f0;
+}
+
+.bump {
+  animation: bump 300ms ease-out;
+}
+
+@keyframes bump {
+  0% {
+    transform: scale(1);
   }
-  
-  .button:hover,
-  .button:active {
-    background-color: #410070;
+  10% {
+    transform: scale(0.9);
   }
-  
+  30% {
+    transform: scale(1.1);
+  }
+  50% {
+    transform: scale(1.15);
+  }
+  100% {
+    transform: scale(1);
+  }
+}
+
+@media (max-width: 768px) {
+  .button {
+    padding: 0.25rem 1.5rem;
+  }
+  .title {
+    display: none;
+  }
   .icon {
-    width: 1.35rem;
-    height: 1.35rem;
-    margin-right: 0.5rem;
+    width: 1rem;
+    height: 1rem;
+    margin-right: 0.25rem;
   }
-  
+
   .badge {
-    background-color: #500388;
-    padding: 0.25rem 1rem;
-    border-radius: 25px;
-    margin-left: 1rem;
-    font-weight: bold;
+    padding: 0.1rem 0.5rem;
+    margin-left: 0.5rem;
   }
-  
-  .button:hover .badge,
-  .button:active .badge {
-    background-color: #8d04f0;
-  }
-  
-  .bump {
-    animation: bump 300ms ease-out;
-  }
+}
