now get data from firebase db

--- a/src/components/Meals/AvailableFoods.module.css
+++ b/src/components/Meals/AvailableFoods.module.css
@@ -11,6 +11,15 @@
   padding: 0;
 }
 
+.loading {
+  text-align: center;
+  color: #fff;
+}
+.error {
+  text-align: center;
+  color: #f01111;
+}
+
 @keyframes meals-appear {
   from {
     opacity: 0;
